# stock-alert

./: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  BUILD_QUICK_START.md  CLAUDE.md  LICENSE  MSI_ASSUMPTIONS.md  PHASE2_GUIDE.md  PORTFOLIO.md  README.md  README.txt  RUNTIME_BEHAVIOR.md  StockAlert.bat  build_msi.ps1  check_key.py  config.example.json  config_editor.py  config_editor_tkinter.py  conftest.py  generate_ico.py  install_deps.py  install_startup.ps1  installer.iss  launch.ps1  launch_output.txt  mypy.ini  pyproject.toml  pytest.ini  requirements-build.txt  requirements-dev.txt  requirements.txt  run.bat  setup.py  setup_msi.py  stock_alert.py  stock_alert_demo.py  stock_alert_phase2.py  stock_alert_tray.py  stockalert.spec  (+4 more)
.claude/: settings.local.json
.claude/agents/: project-maintenance.md
.github/: dependabot.yml
.github/workflows/: ci.yml
.windsurf/rules/: SRP.md  dry.md  error-handling.md  responsive.md  soc.md
backend/: .env.example  README.md  requirements.txt  vercel.json
backend/api/: send_whatsapp.py
backend/scripts/: submit_templates.py  template_status.py  test_hello_world.py  test_real_number.py  whatsapp_templates.py
docs/: BUILD_MSI.md  DEBUG_LOG.md  LESSONS_LEARNED.md  MARKETING.md  MARKETING_WEBSITE_SPEC.md  SESSION_LOG.md  WHATSAPP_MIGRATION_PROMPT.md  project-plan.md
docs/archive/: CHANGELOG_V2.1.md  IMPLEMENTATION_SUMMARY.md  PHASE2_COMPLETE.md  prd.md
docs/developer/: API_SETUP.md  ARCHITECTURE.md  CONTRIBUTING.md
docs/guides/: BUILD_INSTALLER.md  BUILD_QUICK_START.md  CODE_SIGNING_GUIDE.md
docs/legal/: EULA.md  PRIVACY_POLICY.md  THIRD_PARTY_LICENSES.md
docs/user/: USER_GUIDE_EN.md
docs/user_guide/en/: USER_GUIDE.md
docs/user_guide/es/: USER_GUIDE.md
legacy/: create_icon.py  run.py  stock_alert.py
src/stockalert/: __init__.py  __main__.py  app.py  service.py
src/stockalert/api/: __init__.py  base.py  exchange_rate.py  finnhub.py  rate_limiter.py
src/stockalert/core/: __init__.py  alert_manager.py  api_key_manager.py  config.py  currency.py  ipc.py  monitor.py  notification_service.py  paths.py  phone_utils.py  service_controller.py  tier_limits.py  twilio_service.py  windows_service.py
src/stockalert/i18n/: __init__.py  translator.py
src/stockalert/i18n/locales/: en.json  es.json
src/stockalert/ui/: __init__.py  main_window.py  tray_icon.py
src/stockalert/ui/dialogs/: __init__.py  onboarding_dialog.py  profile_dialog.py  settings_dialog.py  ticker_dialog.py
src/stockalert/ui/styles/: proxy_style.py  theme.qss
src/stockalert/ui/widgets/: __init__.py  news_widget.py  toggle_switch.py
src/stockalert/utils/: __init__.py  logging_config.py  market_hours.py
tests/: __init__.py  test_language_persistence.py
tests/gui/: __init__.py  test_main_window.py
tests/integration/: __init__.py  test_api_integration.py
tests/unit/: __init__.py  test_config.py  test_finnhub.py  test_market_hours.py  test_monitor.py  test_rate_limiter.py
utils/: data_provider.py  market_hours.py
