[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stockalert"
version = "3.0.0"
description = "Commercial-grade stock price monitoring with Windows notifications"
readme = "README.md"
license = {text = "Proprietary"}
authors = [
    {name = "Robert Cushman", email = "rcushman@rcsoftware.com"}
]
requires-python = ">=3.10"
keywords = ["stock", "alert", "monitoring", "windows", "notification", "finnhub"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: Other/Proprietary License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "PyQt6>=6.6.0",
    "finnhub-python>=2.4.0",
    "python-dotenv>=1.0.0",
    "winotify>=1.1.0",
    "pytz>=2024.1",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pyautogui>=0.9.54",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "types-pytz>=2024.1.0",
    "types-requests>=2.31.0",
]
build = [
    "cx-Freeze>=7.2.8",
]

[project.scripts]
stockalert = "stockalert.__main__:main"

[project.gui-scripts]
stockalert-gui = "stockalert.__main__:main"

[project.urls]
Homepage = "https://github.com/rcushman/stockalert"
Documentation = "https://github.com/rcushman/stockalert#readme"
Issues = "https://github.com/rcushman/stockalert/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
stockalert = [
    "i18n/locales/*.json",
    "ui/styles/*.qss",
]

# ============================================================================
# Ruff Configuration (imported from .ruff.toml for pyproject.toml compatibility)
# ============================================================================
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value used in comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "PLR2004"]
"src/stockalert/ui/**/*.py" = ["PLR0913"]  # UI code often has many parameters

[tool.ruff.lint.isort]
known-first-party = ["stockalert"]

# ============================================================================
# Mypy Configuration
# ============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "finnhub.*",
    "winotify.*",
    "PIL.*",
    "pyautogui.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gui: marks tests as GUI tests requiring display",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ============================================================================
# Coverage Configuration
# ============================================================================
[tool.coverage.run]
source = ["src/stockalert"]
branch = true
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 80
show_missing = true
